# voxelly

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Info.plist  LICENSE  README.md
assets/: ui.graph
assets/materials/: basic-sprite.mat
assets/shaders/: basic-2d.frag  basic-2d.glsl  basic-2d.vert  grid.frag  grid.glsl  grid.vert  outline.frag  outline.glsl  text-3d.frag  text-3d.glsl  text-3d.vert  text.frag  text.glsl  text.vert  voxel.frag  voxel.glsl  voxel.vert
build-templates/web/: index.html
include/: chunk.hpp  chunk_mesh.hpp  game.hpp  ray.hpp  text_renderer.hpp  world.hpp  world_asset.hpp  world_mesh.hpp
include/engine/: engine.hpp
include/engine/assets/: asset-manager.hpp  asset.hpp  file.hpp  font.hpp  image.hpp  mesh.hpp  shader.hpp
include/engine/components/: camera.hpp  sprite.hpp  text.hpp  transform.hpp  transform2d.hpp
include/engine/core/: core.hpp  director.hpp  filesystem.hpp  scene.hpp  window.hpp
include/engine/font/: font.hpp
include/engine/gfx/: material.hpp  renderer.hpp  renderer_gl.hpp  shader.hpp  texture.hpp
include/engine/gfx/buffer/: index_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp
include/engine/systems/: ui_renderer.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h  gles2.h
libs/glad/src/: gl.c  gles2.c
libs/stb/: CMakeLists.txt
src/: chunk.cpp  chunk_mesh.cpp  game.cpp  main.cpp  text_renderer.cpp  world.cpp  world_asset.cpp
src/engine/assets/: file.cpp  font.cpp  image.cpp  mesh.cpp  shader.cpp
src/engine/components/: camera.cpp  text.cpp
src/engine/core/: filesystem.cpp  window.cpp
src/engine/font/: font.cpp
src/engine/gfx/: renderer.cpp  renderer_gl.cpp  shader.cpp  texture.cpp
src/engine/gfx/buffer/: index_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp
src/engine/systems/: ui_renderer.cpp
